# adier

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  PREVIEW_PLAYER.md  QUALITY_ANALYSIS_IMPLEMENTATION.md  README.md  index.html  package-lock.json  package.json  script.js  setup.bat  start-all.bat  start-backend.bat  start-frontend.bat  stop-all.bat  style.css  tailwind.config.js  test_integration.py  vite.config.ts
backend/: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  STORAGE_IMPLEMENTATION.md  WEBSOCKET_PROGRESS.md  alembic.ini  demo_progress_ws.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
backend/.venv-poetry/: pyvenv.cfg
backend/alembic/: env.py
backend/alembic/versions/: 202410270001_initial_schema.py  20241029_0001_initial_schema.py  20241030_0002_add_clip_version_plan_metadata.py  20241230_0002_add_quality_metrics.py
backend/app/: main.py
backend/app/api/: ai.py  assets.py  dependencies.py  errors.py  health.py  jobs.py  projects.py  providers.py  router.py  storage.py  timeline.py  timelines.py  videos.py
backend/app/core/: __init__.py  config.py  database.py  errors.py  logging.py
backend/app/db/: __init__.py  base.py  models.py  repositories.py  session.py
backend/app/models/: __init__.py  audio_track.py  background_music.py  base.py  clip.py  enums.py  export_job.py  job.py  job_progress.py  media_asset.py  pipeline.py  preset.py  processing_job.py  project.py  scene.py  scene_detection.py  subtitle.py  subtitle_segment.py  timeline.py  timeline_clip.py  transcription.py  video_asset.py
backend/app/repositories/: __init__.py  audio_track.py  background_music.py  base.py  clip.py  export_job.py  job_progress.py  job_repository.py  media_asset.py  preset.py  processing_job.py  project.py  project_repository.py  provider_preference_repository.py  provider_repository.py  scene_detection.py  scene_repository.py  subtitle_repository.py  subtitle_segment.py  timeline_clip.py  timeline_repository.py  transcript_repository.py  video_asset.py  video_repository.py
backend/app/schemas/: __init__.py  ai.py  audio_track.py  background_music.py  base.py  clip.py  common.py  export_job.py  health.py  job.py  job_progress.py  job_status.py  media.py  media_asset.py  pagination.py  preset.py  processing_job.py  project.py  provider.py  scene.py  scene_detection.py  subtitle_segment.py  timeline.py  timeline_clip.py  transcript.py  video.py  video_asset.py
backend/app/services/: __init__.py  ai_service.py  ai_suggestion_service.py  exceptions.py  job_service.py  openai_client.py  openai_service.py  project_service.py  prompt_service.py  prompt_templates.py  scene_analysis_service.py  scene_detection_service.py  storage_service.py  timeline_service.py  (+2 more)
backend/migrations/: env.py
backend/scripts/: init_db.py  test_db.py
backend/tests/: conftest.py  test_ai_manager.py  test_ai_orchestrator.py  test_ai_repositories.py  test_ai_router.py  test_analysis_service.py  test_api_endpoints.py  test_assets_router.py  test_clip_repository.py  test_clips_router.py  test_ffmpeg_service.py  test_health.py  test_job_queue.py  test_job_repository.py  test_job_service.py  test_presets_router.py  test_progress_router.py  test_projects_router.py  test_quality_service.py  test_ranking_service.py  test_splitting_service.py  test_storage_manager.py  test_storage_service.py  test_timeline_service.py  test_video_pipeline_service.py  test_worker_handlers.py
docs/: api.md  (+4 more)
(+346 files in other folders)
