[tool.poetry]
name = "quiz-system-backend"
version = "0.1.0"
description = "FastAPI backend for Quiz System"
authors = ["engine-labs-app[bot] <140088366+engine-labs-app[bot]@users.noreply.github.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.120.0,<0.121.0"
uvicorn = {extras = ["standard"], version = ">=0.38.0,<0.39.0"}
sqlalchemy = ">=2.0.44,<3.0.0"
pydantic-settings = ">=2.11.0,<3.0.0"
python-multipart = ">=0.0.20,<0.0.21"
aiofiles = ">=25.1.0,<26.0.0"
loguru = ">=0.7.3,<0.8.0"
"ffmpeg-python" = ">=0.2.0,<0.3.0"
httpx = ">=0.28.1,<0.29.0"
openai = ">=2.6.1,<3.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
alembic = ">=1.17.0,<2.0.0"
websockets = ">=15.0.1,<16.0.0"
"sse-starlette" = ">=3.0.2,<4.0.0"


black = ">=24.10.0,<25.0.0"
isort = ">=5.13.2,<6.0.0"
pytest = ">=8.3.3,<9.0.0"
"pytest-asyncio" = ">=0.24.0,<0.25.0"
"pytest-mock" = ">=3.14.0,<4.0.0"
ruff = ">=0.7.0,<0.8.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]


[tool.black]
line-length = 100
target-version = ["py312"]
include = '\\.(py|pyi)$'


[tool.isort]
profile = "black"
line_length = 100
src_paths = ["app", "tests"]
known_first_party = ["app"]


[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]
extend-exclude = ["storage", "logs"]


[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "B",
    "I",
    "UP",
    "ASYNC",
]
ignore = ["E501"]


[tool.ruff.format]
preview = true
